animate_move_obj_to_tile: warn on invalid tiles

--- a/play.html
+++ b/play.html
@@ -592,7 +592,7 @@ function drawInventory($el, obj, clickCallback) {
 		} else
 			var inventoryImage = obj.inventory[i].invArt
 
-		console.log("inv img: " + inventoryImage)
+		//console.log("inv img: " + inventoryImage)
 		if(images[inventoryImage] === undefined)
 			lazyLoadImage(inventoryImage, null, false)
 		var img = $("<img>").attr("src", inventoryImage+'.png').
