lookupCritterArt for critter art

--- a/play.html
+++ b/play.html
@@ -277,18 +277,72 @@ function createObjectWithPID(pid, sid) {
 	return obj
 }
 
+function getCritterArtPath(frmPID) {
+	console.log("FRM PID: " + frmPID)
+	var idx = (frmPID & 0x00000fff)
+	var id1 = (frmPID & 0x0000f000) >> 12
+	var id2 = (frmPID & 0x00ff0000) >> 16
+	var id3 = (frmPID & 0x70000000) >> 28
+
+	if (id2 == 0x1b || id2 == 0x1d ||
+			id2 == 0x1e || id2 == 0x37 ||
+			id2 == 0x39 || id2 == 0x3a ||
+			id2 == 0x21 || id2 == 0x40) {
+		throw "reindex(?)"
+	}
+
+	var path = "art/critters/" + getLstId("art/critters/critters", idx).split(',')[0].toLowerCase()
+
+	if(id1 >= 0x0b)
+		throw "?"
+
+	if(id2 >= 0x26 && id2 <= 0x2f)
+		throw ("0x26 and 0x2f")
+	else if(id2 === 0x24)
+		path += "ch"
+	else if(id2 === 0x25)
+		path += "cj"
+	else if(id2 >= 0x30)
+		path += 'r' + String.fromCharCode(id2 + 0x31)
+	else if(id2 >= 0x14)
+		throw "0x14"
+	else if (id2 === 0x12) {
+		throw "0x12"
+		if(id1 === 0x01)
+			path += "dm"
+		else if(id1 === 0x04)
+			path += "gm"
+		else
+			path += "as"
+	}
+	else if(id2 === 0x0d)
+		throw "0x0d"
+	else {
+		if(id2 <= 1 && id1 > 0) {
+			console.log("ID1: " + id1)
+			path += String.fromCharCode(id1 + 'c'.charCodeAt(0))
+		}
+		else
+			path += 'a'
+		path += String.fromCharCode(id2 + 'a'.charCodeAt(0))
+	}
+
+	return path
+}
+
 function lookupArt(frmPID) {
 	var type = getPROType(frmPID)
 	var pidID = frmPID & 0xffff
 
-	if(type === 1) throw "lookupArt: critters"
+    if(type === "critters")
+    	return getCritterArtPath(frmPID)
 
-	var lsts = {"items": "art/items/items", "critters": "art/critters/critters",
+	var lsts = {"items": "art/items/items",
                 "scenery": "art/scenery/scenery", "misc": "art/misc/misc"}
 	var path = "art/" + type + "/" + getLstId(lsts[type], pidID).split('.')[0]
 
 	console.log("LOOKUP ART: " + path)
-	return path
+	return path.toLowerCase()
 }
 
 function dropObject(source, obj) {
