scripting: dialogueEnd, add end to [Done] messages

--- a/play.html
+++ b/play.html
@@ -1132,9 +1132,8 @@ heart.draw = function() {
 	}
 }
 
-function dialogueReply(id) {
-	scriptingEngine.dialogueReply(id)
-}
+function dialogueReply(id) { scriptingEngine.dialogueReply(id) }
+function dialogueEnd() { scriptingEngine.dialogueEnd() }
 
 </script>
 <style>
