--- a/play.html
+++ b/play.html
@@ -16,11 +16,13 @@
 <script src="critter.js"></script>
 <script src="pathfinding-browser.js"></script>
 <script src="criticalEffects.js"></script>
+<script src="skillDependencies.js"></script>
+<script src="characterCreation.js"></script>
 <script>
 "use strict";
 
-var MAP_NAME = "GECKSETL" // name of the current map
-var DEBUG = true // debug mode
+var MAP_NAME = "ENCFITE" // name of the current map
+var DEBUG = false // debug mode
 
 var gMapScript = null
 var floorMap = null
@@ -115,7 +117,8 @@ var playerWeapon = {art: "art/items/uzi", frmPID: 44, pid: 9, pidID: 9,
   invArt: "art/inven/uzi"}
 playerWeapon.weapon = new Weapon(playerWeapon)
 
-var player = {position: {x: 94, y: 109}, orientation: 2, frame: 0,
+var player = PlayerInit()
+			/*{position: {x: 94, y: 109}, orientation: 2, frame: 0,
               art: "art/critters/hmjmpsaa", isPlayer: true, anim: "idle", lastFrameTime: 0,
               path: null, animCallback: null, type: "critter",
           	  baseStats: {STR: 8, PER: 5, END: 5, CHR: 6, INT: 5, AGI: 6, LUK: 5, HP: 100},
@@ -128,8 +131,10 @@ var player = {position: {x: 94, y: 109}, orientation: 2, frame: 0,
           	  		   "Gambling": 25, "Small Guns": 50, "Energy Weapons": 50},
           	  inventory: [
           	  	{type: "misc", name: "Money", pid: 41, pidID: 41, amount: 1337, pro: {textID: 4100, extra: {cost: 1}, invFRM: 117440552}, invArt: 'art/inven/cap2'}
-          	  ]}
-player.stats = cloneStats(player.baseStats)
+          	  ]}*/
+player.inventory = [{type: "misc", name: "Money", pid: 41, pidID: 41, amount: 1337, pro: {textID: 4100,
+	 				extra: {cost: 1}, invFRM: 117440552}, invArt: 'art/inven/cap2'}]
+
 player.toString = function() { return "The Dude" }
 
 function repr(obj) { return JSON.stringify(obj, null, 2) }
@@ -660,6 +665,92 @@ heart.load = function() {
 	          mouseleave(function() { gameHasFocus = false })
 
 	drawPlayerInventory()
+	zsort()
+}
+
+var Mergesort = (function() {
+ 
+  /**
+   * Sorts the array by breaking it down
+   * into smaller chunks.
+   *
+   * @param {Array} array The array to sort
+   */
+  function sort(array, fn) {
+ 
+    var length = array.length,
+        mid    = Math.floor(length * 0.5),
+        left   = array.slice(0, mid),
+        right  = array.slice(mid, length);
+ 
+    if(length === 1) {
+      return array;
+    }
+ 
+    return merge(sort(left, fn), sort(right, fn), fn);
+ 
+  }
+ 
+  /**
+   * Merges two sublists back together.
+   * Shift either left or right onto
+   * the result depending on which is
+   * lower (assuming both exist), and simply
+   * pushes on a list if the other doesn't
+   * exist.
+   *
+   * @param {Array} left The left hand sublist
+   * @param {Array} right The right hand sublist
+   */
+  function merge(left, right, fn) {
+ 
+    var result = [];
+ 
+    while(left.length || right.length) {
+ 
+      if(left.length && right.length) {
+ 
+        if(fn(left[0], right[0]) === -1) {
+          result.push(left.shift());
+        } else {
+          result.push(right.shift());
+        }
+ 
+      } else if (left.length) {
+        result.push(left.shift());
+      } else {
+        result.push(right.shift());
+      }
+ 
+    }
+ 
+    return result;
+ 
+  }
+ 
+  return {
+    sort: sort
+  };
+ 
+})();
+
+function zsort() {
+	gObjects = Mergesort.sort(gObjects, function(a, b) {
+		var aY = a.position.y
+		var bY = b.position.y
+
+		var aX = a.position.x
+		var bX = b.position.x
+
+		if(aY === bY) {
+			if(aX < bX) return -1
+			else if(aX > bX) return 1
+			else if(aX === bX) return 0
+		}
+
+		if(aY < bY) return -1
+		else if(aY > bY) return 1
+	})
 }
 
 function drawInventory($el, obj, clickCallback) {
