ui: add a "Take All" button to loot screen

--- a/play.html
+++ b/play.html
@@ -1125,6 +1125,7 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 		<div id="lootBoxRight"></div>
 
 		<div id="lootBoxDoneButton"></div>
+		<div id="lootBoxTakeAllButton"></div>
 	</div>
 	<div id="dialogueContainer">
 		<div id="dialogueBox">
